<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back_gradiente"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical|top"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp" >

                <ImageView
                    android:id="@+id/imgLogo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ichef_icon" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                    
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/cadastro"
                        android:textColor="@color/branco"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/cadastro_texto"
                        android:textColor="@color/branco"
                        android:textSize="14sp"
                        android:typeface="normal" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/back_formulario_arredondado"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/edtNomeCadastro"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@null"
                    android:hint="@string/nome"
                    android:padding="5dp"
                    android:singleLine="true" />
                
                <EditText
                    android:id="@+id/edtEmailCadastro"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@null"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="5dp"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/edtSenhaCadastro"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/senha"
                    android:inputType="textPassword"
                    android:padding="5dp" />
            </LinearLayout>

            <Button
                android:id="@+id/btnCadastrar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/back_button_arredondado"
                android:text="@string/btn_cadastrar"
                android:textColor="@color/branco" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
